# zero-based-budget

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  app.py  config.py  docker-compose.yml  init_db.py  main.py  notes.md  pyproject.toml  pytest.ini  requirements.txt  streamlit_prototype.py  wsgi.py
.claude/: agent.md
.github/workflows/: deploy.yml
app/: __init__.py  forms.py  models.py
app/routes/: auth.py  house.py  todos.py
app/templates/: base.html
app/templates/auth/: login.html  profile.html
app/templates/house/: expense_form.html  expenses.html  index.html  project_form.html  projects.html  retailer_form.html  retailers.html  todo_form.html  todos.html
docs/: DATABASE_SCHEMA.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_REQUIREMENTS.md  FUNCTIONAL_REQUIREMENTS.md  PROJECT_PLAN_DOCKER.md
tests/: __init__.py  conftest.py  test_app_helpers.py  test_database.py  test_pay_periods.py
